RESOLVED FIXED26394
REGRESSION (Safari 3-Safari 4): Replaced element with percent height in table has incorrect height
https://bugs.webkit.org/show_bug.cgi?id=26394
Summary REGRESSION (Safari 3-Safari 4): Replaced element with percent height in table...
mitz
Reported 2009-06-14 18:41:29 PDT
In the attached test case, the <textarea> and its enclosing table cell seem to have incorrect height. Moreover, the height is not stable: by focusing the pop-up menu repeatedly, additional layout passes can be triggered, which change the height of the <textarea> until it converges.
Attachments
Test case (288 bytes, text/html)
2009-06-14 18:41 PDT, mitz
no flags
Patch (15.16 KB, patch)
2013-05-04 02:15 PDT, Robert Hogan
no flags
Patch (14.32 KB, patch)
2013-05-08 14:11 PDT, Robert Hogan
no flags
mitz
Comment 1 2009-06-14 18:41:44 PDT
Created attachment 31273 [details] Test case
mitz
Comment 2 2009-06-14 18:42:21 PDT
This bug affects the bugs.webkit.org review form.
mitz
Comment 3 2009-06-14 18:42:49 PDT
Robert Hogan
Comment 4 2013-05-04 02:15:13 PDT
Robert Hogan
Comment 5 2013-05-08 14:11:06 PDT
Dave Hyatt
Comment 6 2013-05-09 14:16:36 PDT
Comment on attachment 201107 [details] Patch r=me
WebKit Commit Bot
Comment 7 2013-05-09 14:45:06 PDT
Comment on attachment 201107 [details] Patch Clearing flags on attachment: 201107 Committed r149844: <http://trac.webkit.org/changeset/149844>
WebKit Commit Bot
Comment 8 2013-05-09 14:45:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.