REGRESSION (Safari 3-Safari 4): Replaced element with percent height in table has incorrect height https://bugs.webkit.org/show_bug.cgi?id=26394

Reviewed by David Hyatt.

Source/WebCore:

Text controls or any object that has scrollable content should not flex inside a table cell.
This makes our behaviour the same as IE, FF and Opera (Presto).

* rendering/RenderTableSection.cpp:
(WebCore::RenderTableSection::layoutRows):

LayoutTests:

* fast/replaced/table-percent-height-text-controls-expected.txt: Renamed from LayoutTests/platform/mac/fast/replaced/table-percent-height-text-controls-expected.txt.
* fast/replaced/table-percent-height-text-controls.html:
* platform/gtk/fast/replaced/table-percent-height-text-controls-expected.txt: Removed.
* platform/qt/fast/replaced/table-percent-height-text-controls-expected.txt: Removed.
* platform/win/fast/replaced/table-percent-height-text-controls-expected.txt: Removed.


Canonical link: https://commits.webkit.org/134304@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149844 268f45cc-cd09-0410-ab3c-d52691b4dbfc